Fix vercel.json build commands

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,6 @@
 {
+  "buildCommand": "npm install",
+  "installCommand": "npm install",
   "functions": {
     "api/**/*.js": {
       "maxDuration": 30
